@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -14,7 +13,11 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
 import org.gradle.internal.impldep.org.apache.commons.lang.StringUtils;
+
 import com.adaptris.fxinstaller.models.InterlokProject;
 import com.adaptris.fxinstaller.models.OptionalComponent;
 import com.adaptris.fxinstaller.utils.ResourceUtils;
@@ -23,16 +26,18 @@ import com.adaptris.fxinstaller.utils.ZipUtils;
 
 public class BuildGradleFileGenerator {
 
-  private static final String INTERLOK_FX_INSTALLER_TMP_DIR = "interlok-fx-installer-tmp-";
+  protected static final String BUILD_GRADLE = "build.gradle";
+  protected static final String GRADLE_PROPERTIES = "gradle.properties";
+  protected static final String INTERLOK_VERSION = "interlokVersion";
+  protected static final String INTERLOK_DIST_DIRECTORY = "interlokDistDirectory";
+  protected static final String INTERLOK_BASE_FILESYSTEM_URL = "interlokBaseFilesystemUrl";
+  protected static final String ADDITIONAL_NEXUS_BASE_URL = "additionalNexusBaseUrl";
+
+  private static final String INTERLOK_INSTALLER_TMP_DIR = "interlok-installer-tmp-";
   private static final String BUILD_GRADLE_TEMPLATE = "/templates/build.gradle.template";
-  private static final String BUILD_GRADLE = "build.gradle";
-  private static final String GRADLE_PROPERTIES = "gradle.properties";
-  private static final String INTERLOK_VERSION = "interlokVersion";
-  private static final String INTERLOK_DIST_DIRECTORY = "interlokDistDirectory";
-  private static final String INTERLOK_BASE_FILESYSTEM_URL = "interlokBaseFilesystemUrl";
-  private static final String ADDITIONAL_NEXUS_BASE_URL = "additionalNexusBaseUrl";
   private static final String INTERLOK_GRADLE_FILES = "interlok-gradle-files-";
   private static final String ZIP = ".zip";
+  private static final String INDENT = "  ";
 
   private static final String INSTALLER_PROPERTY_SNAPSHOT_FILESYSTEM_URL = "snapshot.filesystem.url";
   private static final String INSTALLER_PROPERTY_BETA_FILESYSTEM_URL = "beta.filesystem.url";
@@ -44,11 +49,11 @@ public class BuildGradleFileGenerator {
   private final List<BaseFilesystemBuilder> BASE_URL_PARSERS =
       Collections.unmodifiableList(
           Arrays.asList(new BaseFilesystemBuilder[] {
-          (interlokVersion) -> snapshotUrl(interlokVersion),
-          (interlokVersion) -> betaUrl(interlokVersion),
-          (interlokVersion) -> releaseUrl(interlokVersion)
-      }));
-  
+              (interlokVersion) -> snapshotUrl(interlokVersion),
+              (interlokVersion) -> betaUrl(interlokVersion),
+              (interlokVersion) -> releaseUrl(interlokVersion)
+          }));
+
   public BuildGradleFileGenerator() {
     this(Paths.get(System.getProperty("java.io.tmpdir")));
   }
@@ -84,33 +89,27 @@ public class BuildGradleFileGenerator {
   }
 
   protected static String installerTmpDirName(InterlokProject interlokProject) {
-    return INTERLOK_FX_INSTALLER_TMP_DIR + interlokProject.getVersion();
+    return INTERLOK_INSTALLER_TMP_DIR + interlokProject.getVersion();
   }
 
   private void createBuildGradleFile(List<OptionalComponent> optionalComponents, String buildGradleTemplateName, Path destDirPath)
       throws IOException {
     Path buildGradlePath = destDirPath.resolve(BUILD_GRADLE);
 
-    StringBuilder interlokRuntimeSb = new StringBuilder();
-    StringBuilder interlokJavadocsSb = new StringBuilder();
+    String interlokRuntime = toLinesString(optionalComponents, oc -> {
+      return INDENT + "interlokRuntime (\"com.adaptris:" + oc.getId() + ":$interlokVersion\") { changing=true }";
+    });
 
-    for (OptionalComponent optionalComponent : optionalComponents) {
-      interlokRuntimeSb.append("  interlokRuntime (\"com.adaptris:").append(optionalComponent.getId())
-      .append(":$interlokVersion\") { changing=true }");
-      interlokJavadocsSb.append("  interlokJavadocs (\"com.adaptris:").append(optionalComponent.getId())
-      .append(":$interlokVersion:javadoc\") { changing=true; transitive=false }");
-      if (optionalComponents.indexOf(optionalComponent) != optionalComponents.size() - 1) {
-        interlokRuntimeSb.append(System.lineSeparator());
-        interlokJavadocsSb.append(System.lineSeparator());
-      }
-    }
+    String interlokJavadocs = toLinesString(optionalComponents, oc -> {
+      return INDENT + "interlokJavadocs (\"com.adaptris:" + oc.getId() + ":$interlokVersion:javadoc\") { changing=true; transitive=false }";
+    });
 
     String buildGradleTemplate = ResourceUtils.toString(buildGradleTemplateName);
 
-    String buildGradleContent = buildGradleTemplate.replace("#{interlokRuntime}", interlokRuntimeSb.toString());
-    buildGradleContent = buildGradleContent.replace("#{interlokJavadocs}", interlokJavadocsSb.toString());
+    String buildGradleContent = buildGradleTemplate.replace("#{interlokRuntime}", interlokRuntime);
+    buildGradleContent = buildGradleContent.replace("#{interlokJavadocs}", interlokJavadocs);
 
-    Files.write(buildGradlePath, buildGradleContent.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(buildGradlePath, buildGradleContent);
   }
 
   private void createGradlePropertiesFile(String interlokVersion, String interlokDistDirectory, String additionalNexusBaseUrl,
@@ -126,7 +125,7 @@ public class BuildGradleFileGenerator {
     }
     Optional<String> baseUrl =
         BASE_URL_PARSERS.stream().map((p) -> p.build(interlokVersion)).filter((o) -> o.isPresent()).findFirst()
-            .orElse(Optional.empty());
+        .orElse(Optional.empty());
     baseUrl.ifPresent((val) -> properties.put(INTERLOK_BASE_FILESYSTEM_URL, val));
 
     try (OutputStream outputStream = Files.newOutputStream(gradlePropertiesPath)) {
@@ -156,8 +155,12 @@ public class BuildGradleFileGenerator {
         .of(installerProperties.getProperty(INSTALLER_PROPERTY_RELEASE_FILESYSTEM_URL).replace("${release}", rawVersion));
   }
 
+  private String toLinesString(List<OptionalComponent> optionalComponents, Function<OptionalComponent, String> func) {
+    return String.join(System.lineSeparator(), optionalComponents.stream().map(func).collect(Collectors.toList()));
+  }
+
   @FunctionalInterface
-  private static interface BaseFilesystemBuilder {
+  private interface BaseFilesystemBuilder {
     Optional<String> build(String s);
   }
 
